@@ -24,6 +24,7 @@ import org.springframework.test.web.servlet.MvcResult;
 import org.springframework.test.web.servlet.request.MockHttpServletRequestBuilder;
 
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.Collections;
 
 import static org.cloudfoundry.identity.uaa.oauth.token.TokenConstants.ID_TOKEN_HINT_PROMPT;
@@ -63,7 +64,7 @@ class AuthorizeEndpointDocs extends EndpointDocs {
     private JdbcScimUserProvisioning userProvisioning;
 
     @BeforeEach
-    void setUp() throws Exception {
+    void setUp() {
         ScimUser marissa = userProvisioning.query("username eq \"marissa\" and origin eq \"uaa\"", IdentityZoneHolder.get().getId()).get(0);
         UaaPrincipal uaaPrincipal = new UaaPrincipal(marissa.getId(), marissa.getUserName(), marissa.getPrimaryEmail(), marissa.getOrigin(), marissa.getExternalId(), IdentityZoneHolder.get().getId());
         principal = new UaaAuthentication(uaaPrincipal, Collections.singletonList(UaaAuthority.fromAuthorities("uaa.user")), null);
@@ -83,7 +84,7 @@ class AuthorizeEndpointDocs extends EndpointDocs {
                 .param(CLIENT_ID, "login")
                 .param(SCOPE, "openid oauth.approvals")
                 .param(REDIRECT_URI, "http://localhost/app")
-                .param("login_hint", URLEncoder.encode("{\"origin\":\"uaa\"}", "utf-8"))
+                .param("login_hint", URLEncoder.encode("{\"origin\":\"uaa\"}", StandardCharsets.UTF_8))
                 .param(PkceValidationService.CODE_CHALLENGE, UaaTestAccounts.CODE_CHALLENGE)
                 .param(PkceValidationService.CODE_CHALLENGE_METHOD, UaaTestAccounts.CODE_CHALLENGE_METHOD_S256)
                 .session(session);
@@ -138,8 +139,8 @@ class AuthorizeEndpointDocs extends EndpointDocs {
         mockMvc.perform(get)
                 .andExpect(status().isFound())
                 .andDo(document("{ClassName}/{methodName}",
-                        requestParameters).snippets(requestHeaders(
-                        headerWithName("Authorization").description("Bearer token containing uaa.user scope - the authentication for this user"))));
+                        requestParameters,
+                        requestHeaders(headerWithName("Authorization").description("Bearer token containing uaa.user scope - the authentication for this user"))));
     }
 
     @Test
@@ -156,7 +157,7 @@ class AuthorizeEndpointDocs extends EndpointDocs {
                 .param(CLIENT_ID, "app")
                 .param(SCOPE, "openid")
                 .param(REDIRECT_URI, "http://localhost:8080/app/")
-                .param("login_hint", URLEncoder.encode("{\"origin\":\"uaa\"}", "utf-8"))
+                .param("login_hint", URLEncoder.encode("{\"origin\":\"uaa\"}", StandardCharsets.UTF_8))
                 .session(session);
 
         Snippet requestParameters = requestParameters(
@@ -220,7 +221,7 @@ class AuthorizeEndpointDocs extends EndpointDocs {
                 .param(CLIENT_ID, "app")
                 .param(SCOPE, "openid")
                 .param(REDIRECT_URI, "http://localhost:8080/app/")
-                .param("login_hint", URLEncoder.encode("{\"origin\":\"uaa\"}", "utf-8"))
+                .param("login_hint", URLEncoder.encode("{\"origin\":\"uaa\"}", StandardCharsets.UTF_8))
                 .session(session);
 
         Snippet requestParameters = requestParameters(
@@ -257,7 +258,7 @@ class AuthorizeEndpointDocs extends EndpointDocs {
                 .param(CLIENT_ID, "app")
                 .param(SCOPE, "openid")
                 .param(REDIRECT_URI, "http://localhost:8080/app/")
-                .param("login_hint", URLEncoder.encode("{\"origin\":\"uaa\"}", "utf-8"))
+                .param("login_hint", URLEncoder.encode("{\"origin\":\"uaa\"}", StandardCharsets.UTF_8))
                 .session(session);
 
         Snippet requestParameters = requestParameters(
@@ -295,7 +296,7 @@ class AuthorizeEndpointDocs extends EndpointDocs {
                 .param(CLIENT_ID, "app")
                 .param(SCOPE, "openid")
                 .param(REDIRECT_URI, "http://localhost:8080/app/")
-                .param("login_hint", URLEncoder.encode("{\"origin\":\"uaa\"}", "utf-8"))
+                .param("login_hint", URLEncoder.encode("{\"origin\":\"uaa\"}", StandardCharsets.UTF_8))
                 .session(session);
 
         Snippet requestParameters = requestParameters(
